Fixing footer spacing and logo margin

--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ a:hover {
 
 .query-button-container {
     display: flex;
+	flex-wrap: nowrap;
 }
 
 input[type="image"]:hover {
@@ -215,7 +216,7 @@ input[type="search"]::-webkit-search-cancel-button{
     }
 
     .left-links {
-        margin: 5% 0px 0.5% 0px;
+        margin: 35px 0px 10px 0px;
         flex-direction: row;
         justify-content: center;
     }
@@ -233,6 +234,13 @@ input[type="search"]::-webkit-search-cancel-button{
 
 @media only screen and (max-height: 776px) and (min-height: 50px) {
     .logo-container {
-        margin: 33vh 0% 20px 0%;
+        margin: 25vh 0% 20px 0%;
+    }
+}
+
+
+@media only screen and (max-height: 500px) and (min-height: 50px) {
+    .logo-container {
+        margin: 20vh 0% 20px 0%;
     }
 }
